force-app/main/default/objects/Case/fields/AccountIdText__c.field-meta.xml
<CustomField>
    <fullName>AccountIdText__c</fullName>
    <label>AccountIdText</label>
    <length>18</length>
    <type>Text</type>
</CustomField>