force-app/main/default/objects/Case/fields/Associated_Record__c.field-meta.xml
<CustomField>
    <fullName>Associated_Record__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;right(Link_for_Record__c,15) , &apos;Record Link&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Record</label>
    <type>Text</type>
</CustomField>