force-app/main/default/objects/Case/fields/Comments_to_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Comments_to_Submitter__c</fullName>
    <label>Comments to Submitter</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>