force-app/main/default/objects/Case/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Reseller AV</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>End User Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>