force-app/main/default/objects/Case/fields/End_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Type__c</fullName>
    <label>End Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please Choose One</fullName>
                <default>true</default>
                <label>Please Choose One</label>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Non Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>