force-app/main/default/objects/Case/fields/Error_Message_Received__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_Received__c</fullName>
    <label>Error Message Received</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>