force-app/main/default/objects/Case/fields/Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Type__c</fullName>
    <label>Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Support</fullName>
                <default>true</default>
                <label>Customer Support</label>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>RMA Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>