force-app/main/default/objects/Case/fields/Link_for_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_for_Record__c</fullName>
    <label>Link for Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>