force-app/main/default/objects/Case/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>record id from error page if there is one</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>