force-app/main/default/objects/Case/fields/Salesforce_Project__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Project</label>
    <referenceTo>SalesforceProject__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>