force-app/main/default/objects/Case/fields/Serial_Number_of_Product__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_of_Product__c</fullName>
    <label>Serial Number(s) of Product</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>