force-app/main/default/objects/Case/fields/SFDC_Issue__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFDC Issue</label>
    <type>Checkbox</type>
</CustomField>