force-app/main/default/objects/Case/fields/What_Page_were_you_on__c.field-meta.xml
<CustomField>
    <fullName>What_Page_were_you_on__c</fullName>
    <label>What Page were you on?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>