force-app/main/default/objects/Case/fields/What_were_you_doing__c.field-meta.xml
<CustomField>
    <fullName>What_were_you_doing__c</fullName>
    <label>What were you doing?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>