force-app/main/default/objects/Case/recordTypes/Partner_Portal.recordType-meta.xml
<RecordType>
    <fullName>Partner_Portal</fullName>
    <active>true</active>
    <businessProcess>Partner Portal</businessProcess>
    <label>Partner Portal</label>
</RecordType>