force-app/main/default/objects/Case/recordTypes/Salesforce_Issues_to_Admin.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Issues_to_Admin</fullName>
    <active>true</active>
    <businessProcess>Salesforce Admin Issues</businessProcess>
    <label>Salesforce Issues to Admin</label>
</RecordType>