force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Associated_Record__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.TYPE</columns>
    <columns>Link_for_Record__c</columns>
    <columns>Eval_Request__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Escalated</value>
    </filters>
    <label>All Open Cases</label>
</ListView>